--- a/app/views/devices/_form.html.erb
+++ b/app/views/devices/_form.html.erb
@@ -12,87 +12,87 @@
 <% end %>
 
 <!-- horizontal form -->
-<%= form_for @device, :html => {:class => "form-horizontal"} do |f| %>
+<%= form_for @device do |f| %>
 
-  <div class="form-group">
-    <%= f.label :tag, class: "col-xs-12 col-sm-2 control-label" %>
-    <div class="col-xs-10 col-sm-4">
+  <div class="form-group row">
+    <%= f.label :tag, class: "col-sm-2 control-label" %>
+    <div class="col-sm-4">
       <%= f.text_field :tag, class: "form-control" %>
     </div>
   </div>
 
-  <div class="form-group">
-    <%= f.label :name, class: "col-xs-12 col-sm-2 control-label" %>
-    <div class="col-xs-10 col-sm-4">
+  <div class="form-group row">
+    <%= f.label :name, class: "col-sm-2 control-label" %>
+    <div class="col-sm-4">
       <%= f.text_field :name, class: "form-control" %>
     </div>
   </div>
 
-  <div class="form-group">
-    <%= f.label :dev_type, class: "col-xs-12 col-sm-2 control-label" %>
-    <div class="col-xs-10 col-sm-4">
+  <div class="form-group row">
+    <%= f.label :dev_type, class: "col-sm-2 control-label" %>
+    <div class="col-sm-4">
       <%= f.text_field :dev_type, class: "form-control" %>
     </div>
   </div>
 
-  <div class="form-group">
-    <%= f.label :make, class: "col-xs-12 col-sm-2 control-label" %>
-    <div class="col-xs-10 col-sm-4">
+  <div class="form-group row">
+    <%= f.label :make, class: "col-sm-2 control-label" %>
+    <div class="col-sm-4">
       <%= f.text_field :make, class: "form-control" %>
     </div>
   </div>
 
-  <div class="form-group">
-    <%= f.label :model, class: "col-xs-12 col-sm-2 control-label" %>
-    <div class="col-xs-10 col-sm-4">
+  <div class="form-group row">
+    <%= f.label :model, class: "col-sm-2 control-label" %>
+    <div class="col-sm-4">
       <%= f.text_field :model, class: "form-control" %>
     </div>
   </div>
 
-  <div class="form-group">
-    <%= f.label :serial, class: "col-xs-12 col-sm-2 control-label" %>
-    <div class="col-xs-10 col-sm-4">
+  <div class="form-group row">
+    <%= f.label :serial, class: "col-sm-2 control-label" %>
+    <div class="col-sm-4">
       <%= f.text_field :serial, class: "form-control" %>
     </div>
   </div>
 
-  <div class="form-group">
-    <%= f.label :purchased_on, class: "col-xs-12 col-sm-2 control-label" %>
-    <div class="col-xs-10 col-sm-4">
+  <div class="form-group row">
+    <%= f.label :purchased_on, class: "col-sm-2 control-label" %>
+    <div class="col-sm-4">
       <%= f.date_field :purchased_on, class: "form-control" %>
     </div>
   </div>
 
-  <div class="form-group">
-    <%= f.label :warranty_length, class: "col-xs-12 col-sm-2 control-label" %>
-    <div class="col-xs-10 col-sm-4">
+  <div class="form-group row">
+    <%= f.label :warranty_length, class: "col-sm-2 control-label" %>
+    <div class="col-sm-4">
       <%= f.text_field :warranty_length, class: "form-control" %>
     </div>
   </div>
 
-  <div class="form-group">
-    <%= f.label :warranty_type, class: "col-xs-12 col-sm-2 control-label" %>
-    <div class="col-xs-10 col-sm-4">
+  <div class="form-group row">
+    <%= f.label :warranty_type, class: "col-sm-2 control-label" %>
+    <div class="col-sm-4">
       <%= f.text_field :warranty_type, class: "form-control" %>
     </div>
   </div>
 
-  <div class="form-group">
-    <%= f.label :assigned_to, class: "col-xs-12 col-sm-2 control-label" %>
-    <div class="col-xs-10 col-sm-4">
+  <div class="form-group row">
+    <%= f.label :assigned_to, class: "col-sm-2 control-label" %>
+    <div class="col-sm-4">
       <%= f.collection_select :person_id, Person.order(:last_name), :id, :full_name, {prompt: true, include_blank: "None"}, {class: "form-control"} %>
     </div>
   </div>
 
-  <div class="form-group">
-    <%= f.label :notes, class: "col-xs-12 col-sm-2 control-label" %>
-    <div class="col-xs-10 col-sm-4">
+  <div class="form-group row">
+    <%= f.label :notes, class: "col-sm-2 control-label" %>
+    <div class="col-sm-4">
       <%= f.text_area :notes, class: "form-control" %>
     </div>
   </div>
 
-  <div class="actions form-group">
-    <div class="col-xs-12 col-sm-10 col-sm-offset-2">
+  <div class="actions form-group row">
+    <div class="col-sm-10 col-sm-offset-2">
       <%= f.submit "Submit", class: "btn btn-success" %>
       <%= link_to "Back", :back, class: "btn btn-primary" %>
     </div>
