--- a/app/views/licences/_form.html.erb
+++ b/app/views/licences/_form.html.erb
@@ -12,60 +12,60 @@
 <% end %>
 
 <!-- horizontal form -->
-<%= form_for @licence, :html => {:class => "form-horizontal"} do |f| %>
+<%= form_for @licence do |f| %>
 
-  <div class="form-group">
-    <%= f.label :vendor, class: "col-xs-12 col-sm-2 control-label" %>
-    <div class="col-xs-10 col-sm-4">
+  <div class="form-group row">
+    <%= f.label :vendor, class: "col-sm-2 control-label" %>
+    <div class="col-sm-4">
       <%= f.text_field :vendor, class: "form-control" %>
     </div>
   </div>
 
-  <div class="form-group">
-    <%= f.label :app_name, class: "col-xs-12 col-sm-2 control-label" %>
-    <div class="col-xs-10 col-sm-4">
+  <div class="form-group row">
+    <%= f.label :app_name, class: "col-sm-2 control-label" %>
+    <div class="col-sm-4">
       <%= f.text_field :app_name, class: "form-control" %>
     </div>
   </div>
 
-  <div class="form-group">
-    <%= f.label :version, class: "col-xs-12 col-sm-2 control-label" %>
-    <div class="col-xs-10 col-sm-4">
+  <div class="form-group row">
+    <%= f.label :version, class: "col-sm-2 control-label" %>
+    <div class="col-sm-4">
       <%= f.text_field :version, class: "form-control" %>
     </div>
   </div>
 
-  <div class="form-group">
-    <%= f.label :edition, class: "col-xs-12 col-sm-2 control-label" %>
-    <div class="col-xs-10 col-sm-4">
+  <div class="form-group row">
+    <%= f.label :edition, class: "col-sm-2 control-label" %>
+    <div class="col-sm-4">
       <%= f.text_field :edition, class: "form-control" %>
     </div>
   </div>
 
-  <div class="form-group">
-    <%= f.label :channel, class: "col-xs-12 col-sm-2 control-label" %>
-    <div class="col-xs-10 col-sm-4">
+  <div class="form-group row">
+    <%= f.label :channel, class: "col-sm-2 control-label" %>
+    <div class="col-sm-4">
       <%= f.text_field :channel, class: "form-control" %>
     </div>
   </div>
 
-  <div class="form-group">
-    <%= f.label :purchased_from, class: "col-xs-12 col-sm-2 control-label" %>
-    <div class="col-xs-10 col-sm-4">
+  <div class="form-group row">
+    <%= f.label :purchased_from, class: "col-sm-2 control-label" %>
+    <div class="col-sm-4">
       <%= f.text_field :purchased_from, class: "form-control" %>
     </div>
   </div>
 
-  <div class="form-group">
-    <%= f.label :purchased_on, class: "col-xs-12 col-sm-2 control-label" %>
-    <div class="col-xs-10 col-sm-4">
+  <div class="form-group row">
+    <%= f.label :purchased_on, class: "col-sm-2 control-label" %>
+    <div class="col-sm-4">
       <%= f.date_field :purchased_on, class: "form-control" %>
     </div>
   </div>
 
-  <div class="form-group">
-    <%= f.label :in_use, class: "col-xs-12 col-sm-2 control-label" %>
-    <div class="col-xs-10 col-sm-4">
+  <div class="form-group row">
+    <%= f.label :in_use, class: "col-sm-2 control-label" %>
+    <div class="col-sm-4">
       <%= f.select :in_use, [["Yes", true],["No", false]], {prompt: true}, {class: "form-control"} %>
     </div>
   </div>
@@ -73,16 +73,16 @@
   <fieldset>
     <legend>Assign to</legend>
 
-    <div class="form-group">
-      <%= f.label :device_id, class: "col-xs-12 col-sm-2 control-label" %>
-      <div class="col-xs-10 col-sm-4">
+    <div class="form-group row">
+      <%= f.label :device_id, class: "col-sm-2 control-label" %>
+      <div class="col-sm-4">
         <%= f.collection_select :device_id, Device.order(:tag), :id, :name, {prompt: true, include_blank: "None"}, {class: "form-control"} %>
       </div>
     </div>
 
-    <div class="form-group">
-      <%= f.label :person_id, class: "col-xs-12 col-sm-2 control-label" %>
-      <div class="col-xs-10 col-sm-4">
+    <div class="form-group row">
+      <%= f.label :person_id, class: "col-sm-2 control-label" %>
+      <div class="col-sm-4">
         <%= f.collection_select :person_id, Person.order(:last_name), :id, :full_name, {prompt: true, include_blank: "None"}, {class: "form-control"} %>
       </div>
     </div>
@@ -90,16 +90,16 @@
 
   <fieldset>
   <legend></legend>
-  <div class="form-group">
-    <%= f.label :notes, class: "col-xs-12 col-sm-2 control-label" %>
-    <div class="col-xs-10 col-sm-4">
+  <div class="form-group row">
+    <%= f.label :notes, class: "col-sm-2 control-label" %>
+    <div class="col-sm-4">
       <%= f.text_area :notes, class: "form-control" %>
     </div>
   </div>
   </fieldset>
 
-  <div class="actions form-group">
-    <div class="col-xs-12 col-sm-10 col-sm-offset-2">
+  <div class="actions form-group row">
+    <div class="col-sm-10 col-sm-offset-2">
       <%= f.submit "Submit", class: "btn btn-success" %>
       <%= link_to "Back", :back, class: "btn btn-primary" %>
     </div>
