--- a/app/views/people/_form.html.erb
+++ b/app/views/people/_form.html.erb
@@ -12,38 +12,38 @@
 <% end %>
 
 <!-- horizontal form -->
-<%= form_for @person, :html => {:class => "form-horizontal"} do |f| %>
+<%= form_for @person do |f| %>
 
-  <div class="form-group">
-    <%= f.label :first_name, class: "col-xs-12 col-sm-2 control-label" %>
-    <div class="col-xs-10 col-sm-4">
+  <div class="form-group row">
+    <%= f.label :first_name, class: "col-sm-2 col-form-label" %>
+    <div class="col-sm-4">
       <%= f.text_field :first_name, class: "form-control" %>
     </div>
   </div>
 
-  <div class="form-group">
-    <%= f.label :last_name, class: "col-xs-12 col-sm-2 control-label" %>
-    <div class="col-xs-10 col-sm-4">
+  <div class="form-group row">
+    <%= f.label :last_name, class: "col-sm-2 col-form-label" %>
+    <div class="col-sm-4">
       <%= f.text_field :last_name, class: "form-control" %>
     </div>
   </div>
 
-  <div class="form-group">
-    <%= f.label :location, class: "col-xs-12 col-sm-2 control-label" %>
-    <div class="col-xs-10 col-sm-4">
+  <div class="form-group row">
+    <%= f.label :location, class: "col-sm-2 col-form-label" %>
+    <div class="col-sm-4">
       <%= f.text_field :location, class: "form-control" %>
     </div>
   </div>
 
-  <div class="form-group">
-    <%= f.label :notes, class: "col-xs-12 col-sm-2 control-label" %>
-    <div class="col-xs-10 col-sm-4">
+  <div class="form-group row">
+    <%= f.label :notes, class: "col-sm-2 col-form-label" %>
+    <div class="col-sm-4">
       <%= f.text_area :notes, class: "form-control" %>
     </div>
   </div>
 
-  <div class="actions form-group">
-    <div class="col-xs-12 col-sm-10 col-sm-offset-2">
+  <div class="actions form-group row">
+    <div class="col-sm-10 col-sm-offset-2">
       <%= f.submit "Submit", class: "btn btn-success" %>
       <%= link_to "Back", :back, class: "btn btn-primary" %>
     </div>
