--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,12 +1,12 @@
 <h2>Change your password</h2>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put, class: "form-horizontal" }) do |f| %>
+<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
   <%= f.hidden_field :reset_password_token %>
 
-  <div class="form-group">
-    <%= f.label :password, "New password", class: "col-xs-12 col-sm-2 control-label" %>
-    <div class="col-xs-10 col-sm-4">
+  <div class="form-group row">
+    <%= f.label :password, "New password", class: "col-sm-2 control-label" %>
+    <div class="col-sm-4">
       <%= f.password_field :password, autocomplete: "off", class: "form-control" %>
       <% if @minimum_password_length %>
         <span class="help-block"><%= @minimum_password_length %> characters minimum</span>
@@ -15,14 +15,14 @@
   </div>
 
   <div class="form-group">
-    <%= f.label :password_confirmation, "Confirm new password", class: "col-xs-12 col-sm-2 control-label" %>
-    <div class="col-xs-10 col-sm-4">
+    <%= f.label :password_confirmation, "Confirm new password", class: "col-sm-2 control-label" %>
+    <div class="col-sm-4">
       <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control" %>
     </div>
   </div>
 
   <div class="actions form-group">
-    <div class="col-xs-12 col-sm-10 col-sm-offset-2">
+    <div class="col-sm-10 offset-sm-2">
       <%= f.submit "Change my password", class: "btn btn-success" %>
     </div>
   </div>
