--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,11 +1,11 @@
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
-<%= form_for(resource, as: resource_name, url: user_registration_path, html: { class: "form-horizontal", method: :put }) do |f| %>
+<%= form_for(resource, as: resource_name, url: user_registration_path, html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
 
-  <div class="form-group">
-    <%= f.label :email, class: "col-xs-12 col-sm-2 control-label" %>
-    <div class="col-xs-10 col-sm-4">
+  <div class="form-group row">
+    <%= f.label :email, class: "col-sm-2 control-label" %>
+    <div class="col-sm-4">
       <%= f.email_field :email, autofocus: true, class: "form-control" %>
     </div>
   </div>
@@ -14,17 +14,17 @@
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
 
-  <div class="form-group">
-    <%= f.label :current_password, class: "col-xs-12 col-sm-2 control-label" %>
-    <div class="col-xs-10 col-sm-4">
+  <div class="form-group row">
+    <%= f.label :current_password, class: "col-sm-2 control-label" %>
+    <div class="col-sm-4">
       <%= f.password_field :current_password, autocomplete: "off", class: "form-control" %>
       <span class="help-block">We need your current password to confirm changes</span>
     </div>
   </div>
 
-  <div class="form-group">
-    <%= f.label :password, "New Password", class: "col-xs-12 col-sm-2 control-label" %>
-    <div class="col-xs-10 col-sm-4">
+  <div class="form-group row">
+    <%= f.label :password, "New Password", class: "col-sm-2 control-label" %>
+    <div class="col-sm-4">
       <%= f.password_field :password, autocomplete: "off", class: "form-control" %>
       <% if @minimum_password_length %>
         <span class="help-block"><%= @minimum_password_length %> characters minimum</span>
@@ -32,15 +32,15 @@
     </div>
   </div>
 
-  <div class="form-group">
-    <%= f.label :password_confirmation, class: "col-xs-12 col-sm-2 control-label" %>
-    <div class="col-xs-10 col-sm-4">
+  <div class="form-group row">
+    <%= f.label :password_confirmation, class: "col-sm-2 control-label" %>
+    <div class="col-sm-4">
       <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control" %>
     </div>
   </div>
 
-  <div class="actions form-group">
-    <div class="col-xs-12 col-sm-10 col-sm-offset-2">
+  <div class="actions form-group row">
+    <div class="col-sm-10 offset-sm-2">
       <%= f.submit "Update", class: "btn btn-success" %>
       <%= link_to "Back", :back, class: "btn btn-primary" %>
     </div>
