--- a/app/views/import/index.html.erb
+++ b/app/views/import/index.html.erb
@@ -1,23 +1,23 @@
 <h1>Import Data</h1>
 
 <h3>Import People</h3>
-<%= form_tag import_people_path, multipart: true, class: "form-inline" do %>
-  <div class="form-group">
-    <%= file_field_tag :file, class: "form-control" %>
+<%= form_tag import_people_path, multipart: true do %>
+  <div class="custom-file col-6">
+    <%= file_field_tag(:people_file, class: "custom-file-input") %>
+    <%= label_tag(:people_file, "Choose file", class: "custom-file-label") %>
   </div>
-
   <div class="actions form-group">
-    <%= submit_tag "Import CSV", class: "btn btn-success" %>
+    <%= submit_tag("Import CSV", class: "btn btn-success") %>
     <%= link_to 'Download a template csv', asset_path("people_template.csv"), class: "btn btn-link" %>
   </div>
 <% end %>
 
 <h3>Import Devices</h3>
-<%= form_tag import_devices_path, multipart: true, class: "form-inline" do %>
-  <div class="form-group">
-    <%= file_field_tag :file, class: "form-control" %>
+<%= form_tag import_devices_path, multipart: true do %>
+  <div class="custom-file col-6">
+    <%= file_field_tag(:device_file, class: "custom-file-input") %>
+    <%= label_tag(:device_file, "Choose file", class: "custom-file-label") %>
   </div>
-
   <div class="actions form-group">
     <%= submit_tag "Import CSV", class: "btn btn-success" %>
     <%= link_to 'Download a template csv', asset_path("devices_template.csv"), class: "btn btn-link" %>
@@ -25,13 +25,13 @@
 <% end %>
 
 <h3>Import Licences</h3>
-<%= form_tag import_licences_path, multipart: true, class: "form-inline" do %>
-  <div class="form-group">
-    <%= file_field_tag :file, class: "form-control" %>
+<%= form_tag import_licences_path, multipart: true do %>
+  <div class="custom-file col-6">
+    <%= file_field_tag(:licence_file, class: "custom-file-input") %>
+    <%= label_tag(:licence_file, "Choose file", class: "custom-file-label") %>
   </div>
-
-  <div class="actions form-group">
-    <%= submit_tag "Import CSV", class: "btn btn-success" %>
-    <%= link_to 'Download a template csv', asset_path("licences_template.csv"), class: "btn btn-link" %>
+  <div>
+  <%= submit_tag("Import CSV", class: "btn btn-success") %>
+  <%= link_to 'Download a template csv', asset_path("licences_template.csv"), class: "btn btn-link" %>
   </div>
 <% end %>
