--- a/app/views/devices/index.html.erb
+++ b/app/views/devices/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Hardware</h1>
-<table class="table table-striped table-sm">
+<table class="table table-striped table-sm mt-4">
   <thead>
     <tr>
       <th>Asset Tag</th>
