--- a/app/views/licences/index.html.erb
+++ b/app/views/licences/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Software</h1>
-<table class="table table-striped table-sm">
+<table class="table table-striped table-sm mt-4">
   <thead>
     <tr>
       <th rowspan="2">Vendor</th>
