--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -1,6 +1,6 @@
 <h1>People</h1>
 
-<table class="table table-striped table-sm">
+<table class="table table-striped table-sm mt-4">
   <thead>
     <tr>
       <th>Name</th>
